# useful-py-codes

./: .gitignore  README.md
3b1b_animations/: main.py  pyproject.toml  volterra_lotka_animation.py  volterra_lotka_animation_v2.py
3d_animation/: testing_orbits.py
apivk/: main.py
birtdays/: main.py
cities/: main.py
insta_followers_analysis/: insta.js  insta.py
logParcing/: main.py
maths/: main.py
mosaic/: main.py
mosaic/python-photo-mosaic/: mosaic.py
ppm_diff/: diff.ppm  diff_2.ppm  main.py  show.ppm
pths_photo/: main.py  main2.py
rome/: color_seg.py  main.py
small_finance_analysis/: app_main.py  main.py
small_finance_analysis/output/: John.xlsx  Luke.xlsx  Mary.xlsx
telegram_counter/: main.py
test_tel_bot/: main.py
translator_for_dict/: main.py
translator_yaml_json/: main.py
water-pipe/: Water_Pipe_Classification.csv  assessment.ipynb
